manifest/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: password-self-service
  name: password-self-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: password-self-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: password-self-service
    spec:
      containers:
      - name: password-self-service
        image: registry.cn-hangzhou.aliyuncs.com/kubeop/password-self-service:v1.0.0
        imagePullPolicy: Always
        args:
          - --config=/etc/password-self-service/password-self-service.yaml
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/password-self-service
          name: password-self-service
          readOnly: false
      terminationGracePeriodSeconds: 60
      volumes:
      - name: password-self-service
        configMap:
          name: password-self-service
